@@ -1,6 +1,6 @@
 #VRML V2.0 utf8
 
-META "title" "BrowserOptions"
+META "title" "Scripting Browser"
 
 DEF Touch TouchSensor { }
 
