@@ -1,3 +1,8 @@
+2013-06-08  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Remove.h:
+	* IndexedMultiMap.h: 
+
 2013-06-05  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* IndexedMultiMap.h: 
