@@ -1,5 +1,10 @@
 2013-06-08  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Browser.wrl:
+	* X3DScene.importedNode.wrl: 
+
+2013-06-08  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* GoldenSphere.wrl:
 	* GoldenSphereAnimation.wrl: 
 
